// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DidUpgradeExplainer should render DID already removed from chain 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Decentralized Identifier
    </h1>
    <p
      class="subline"
    >
      On-chain DID was deleted
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with deleted on-chain DID
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4tPoYT9j4i429JktnyX9EEu9StL58YfdPCi8cUkYnvtAKRbK"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="deleted"
    >
      You deleted your on-chain DID and can no longer use this feature. To start using an on-chain DID, please create a new identity.
    </p>
    <a
      class="back"
      href="/"
    >
      Back
    </a>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`DidUpgradeExplainer should render DID not on chain yet 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Decentralized Identifier
    </h1>
    <p
      class="subline"
    >
      Upgrade to an on-chain DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <div
      class="functionality"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      Upgrading enables you to sign with your on-chain DID and use new functionality.
    </div>
    <p
      class="deposit"
    >
      A deposit is needed to create your on-chain DID. The deposit will be refunded if you remove your on-chain DID.
    </p>
    <p
      class="buttonsLine"
    >
      <a
        class="cancel"
        href="/"
      >
        Cancel
      </a>
      <a
        aria-disabled="false"
        class="upgrade"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade/sign"
      >
        Upgrade
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
